--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="hero-content">
                 <h1>Bienvenido a ArtisCommunity</h1>
                 <p>Donde la creatividad no tiene límites</p>
-                <a href="#" class="btn">Únete Ahora</a>
+                <a href="https://discord.gg/yRFAwf5kZv" class="btn">Únete Ahora</a>
             </div>
         </section>
 
